force-app/main/default/objects/BinLift__c/BinLift__c.object-meta.xml
<CustomObject>
    <label>Bin Lift</label>
    <nameField>
        <displayFormat>BL-{0}</displayFormat>
        <label>#</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Bin Lifts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>