force-app/main/default/objects/BinLift__c/fields/CollectedAt__c.field-meta.xml
<CustomField>
    <fullName>CollectedAt__c</fullName>
    <label>Collected At</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>