force-app/main/default/objects/BinLift__c/fields/CoordinateX__c.field-meta.xml
<CustomField>
    <fullName>CoordinateX__c</fullName>
    <label>Coordinate X</label>
    <precision>9</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>