force-app/main/default/objects/BinLift__c/fields/CoordinateY__c.field-meta.xml
<CustomField>
    <fullName>CoordinateY__c</fullName>
    <label>Coordinate Y</label>
    <precision>9</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>