force-app/main/default/objects/BinLift__c/fields/DuplicateOf__c.field-meta.xml
<CustomField>
    <fullName>DuplicateOf__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Duplicate Of</label>
    <referenceTo>BinLift__c</referenceTo>
    <relationshipLabel>Duplicates</relationshipLabel>
    <relationshipName>Duplicates</relationshipName>
    <type>Lookup</type>
</CustomField>