force-app/main/default/objects/BinLift__c/fields/IsExternalSupplierLift__c.field-meta.xml
<CustomField>
    <fullName>IsExternalSupplierLift__c</fullName>
    <defaultValue>false</defaultValue>
    <label>External Supplier Lift?</label>
    <type>Checkbox</type>
</CustomField>