force-app/main/default/objects/BinLift__c/fields/IsScheduledForDeletion__c.field-meta.xml
<CustomField>
    <fullName>IsScheduledForDeletion__c</fullName>
    <formula>OR(TEXT(Status__c) == &apos;Duplicate&apos;, DATEVALUE(CreatedDate) &lt; TODAY() - 180)</formula>
    <label>Scheduled For Deletion</label>
    <type>Checkbox</type>
</CustomField>