force-app/main/default/objects/BinLift__c/fields/Kilogram__c.field-meta.xml
<CustomField>
    <fullName>Kilogram__c</fullName>
    <label>Kilogram</label>
    <precision>18</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Number</type>
</CustomField>