force-app/main/default/objects/BinLift__c/fields/Location__c.field-meta.xml
<CustomField>
    <fullName>Location__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Location</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Bin Lifts</relationshipLabel>
    <relationshipName>BinLifts</relationshipName>
    <type>Lookup</type>
</CustomField>