force-app/main/default/objects/BinLift__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
                <default>true</default>
                <label>New</label>
            </value>
            <value>
                <fullName>Attempt 1</fullName>
            </value>
            <value>
                <fullName>Matched</fullName>
            </value>
            <value>
                <fullName>No match</fullName>
            </value>
            <value>
                <fullName>Weight Added</fullName>
            </value>
            <value>
                <fullName>Duplicate</fullName>
            </value>
            <value>
                <fullName>Unknown Location</fullName>
            </value>
            <value>
                <fullName>Unknown Category</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>