force-app/main/default/objects/BinLift__c/fields/TransponderCode__c.field-meta.xml
<CustomField>
    <fullName>TransponderCode__c</fullName>
    <label>Transponder Code</label>
    <length>32</length>
    <required>true</required>
    <type>Text</type>
</CustomField>