force-app/main/default/objects/BinLift__c/fields/VehicleRegistration__c.field-meta.xml
<CustomField>
    <fullName>VehicleRegistration__c</fullName>
    <label>Vehicle Registration</label>
    <length>20</length>
    <type>Text</type>
</CustomField>