force-app/main/default/objects/BinLift__c/fields/WasteCategoryCode__c.field-meta.xml
<CustomField>
    <fullName>WasteCategoryCode__c</fullName>
    <defaultValue>&quot;Invalid&quot;</defaultValue>
    <label>Waste Category Code</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>