force-app/main/default/objects/BinLift__c/fields/Weight__c.field-meta.xml
<CustomField>
    <fullName>Weight__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Weight</label>
    <referenceTo>Weight__c</referenceTo>
    <relationshipLabel>Bin Lifts</relationshipLabel>
    <relationshipName>BinLifts</relationshipName>
    <type>Lookup</type>
</CustomField>