force-app/main/default/objects/BinLift__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Key__c</columns>
    <columns>TransponderCode__c</columns>
    <columns>WasteCategoryCode__c</columns>
    <columns>Kilogram__c</columns>
    <columns>AllowedWeight__c</columns>
    <columns>Location__c</columns>
    <columns>LocationCode__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>